# lsst-efd-client

./: .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CHANGELOG.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  pyproject.toml  requirements_dev.txt  setup.cfg  setup.py  tox.ini
.github/: CONTRIBUTING.md
.github/workflows/: ci.yaml  periodic-ci.yaml
changelog.d/: 20230706_182754_jsick_DM_39912.md
doc/: .gitignore  conf.py  getting-started.rst  index.rst  manifest.yaml
doc/lsst_efd_client/: index.rst
docs/: _rst_epilog.rst  api.rst  conf.py  documenteer.toml  getting-started.rst  index.rst
docs/dev/: development.rst  index.rst  release.rst
docs/user-guide/: getting-started.rst  index.rst  sal7-indexed-components.rst
lsst_efd_client/: __init__.py  auth_helper.py  efd_helper.py  efd_utils.py
src/lsst_efd_client/: __init__.py  auth_helper.py  efd_helper.py  efd_utils.py
tests/: __init__.py  efd_index_test.hdf  efd_test.hdf  expected.txt  packed_data.hdf  packed_data.pkl  test_creds_badperms.yaml  test_lsst_efd_client.py
tests/cassettes/: test_auth_host.yaml  test_auth_list.yaml  test_auth_password.yaml  test_auth_port.yaml  test_auth_registry.yaml  test_auth_user.yaml  test_bad_units.yaml  test_build_query.yaml  test_build_query_delta.yaml  test_efd_names.yaml  test_fields.yaml  test_non_existing_topic.yaml  test_packed_time_series.yaml  test_time_series.yaml  test_top_n.yaml  test_topics.yaml
